SIVARIA2-89 Added OWASP dependency-check pulgin into the build, updated some dependencies to resolve most of the vulnerabilities

--- a/validation-services-parent/bdoc-validation-service/pom.xml
+++ b/validation-services-parent/bdoc-validation-service/pom.xml
@@ -42,6 +42,14 @@
             <groupId>org.digidoc4j</groupId>
             <artifactId>digidoc4j</artifactId>
         </dependency>
+
+        <!-- Override vulnerable version of transitive DigiDoc4J dependency -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.13</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
