--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -41,13 +41,12 @@
     <properties>
         <project.encoding>UTF-8</project.encoding>
         <language.level>1.8</language.level>
-        <spring.boot.version>1.4.1.RELEASE</spring.boot.version>
+        <spring.boot.version>1.4.2.RELEASE</spring.boot.version>
+        <dss.version>5.0.d4j.3</dss.version>
+        <cxf.version>3.1.13</cxf.version>
         <junit.version>4.12</junit.version>
         <mockito.version>2.10.0</mockito.version>
-        <powermock.version>1.6.2</powermock.version>
-        <dss.version>5.0.d4j.3</dss.version>
-        <cxf.version>3.1.4</cxf.version>
-        <powermock.version>1.6.5</powermock.version>
+        <powermock.version>1.7.3</powermock.version>
     </properties>
 
     <dependencyManagement>
@@ -258,18 +257,23 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.16.10</version>
+                <version>1.16.18</version>
             </dependency>
 
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
-                <version>2.7.3</version>
+                <version>2.8.4</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.7.3</version>
+                <version>2.8.4</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>2.8.4</version>
             </dependency>
             <dependency>
                 <groupId>org.json</groupId>
@@ -288,6 +292,18 @@
                 <groupId>commons-httpclient</groupId>
                 <artifactId>commons-httpclient</artifactId>
                 <version>3.1</version>
+            </dependency>
+
+            <!-- Override vulnerable version of Logback among transitive dependencies -->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.2.3</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>1.2.3</version>
             </dependency>
 
             <!-- Test dependencies -->
