--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -39,9 +39,9 @@
         <project.encoding>UTF-8</project.encoding>
         <language.level>1.8</language.level>
         <dss.version>5.0.d4j.3</dss.version>
-        <spring.boot.version>1.4.1.RELEASE</spring.boot.version>
+        <spring.boot.version>1.4.2.RELEASE</spring.boot.version>
         <digidoc4j.version>1.0.7.beta.2</digidoc4j.version>
-        <powermock.version>1.6.5</powermock.version>
+        <powermock.version>1.7.3</powermock.version>
     </properties>
 
     <dependencyManagement>
@@ -84,12 +84,17 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
-                <version>2.7.3</version>
+                <version>2.8.4</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.7.3</version>
+                <version>2.8.4</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>2.8.4</version>
             </dependency>
             <dependency>
                 <groupId>org.json</groupId>
@@ -97,11 +102,23 @@
                 <version>20160212</version>
             </dependency>
 
+            <!-- Override vulnerable version of Logback among transitive dependencies -->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.2.3</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>1.2.3</version>
+            </dependency>
+
             <!-- Lombok for getters and setters -->
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.16.10</version>
+                <version>1.16.18</version>
             </dependency>
 
             <dependency>
