SIVARIA2-89 Updated remaining vulnerable libraries

--- a/siva-parent/siva-sample-application/src/main/resources/application.yml
+++ b/siva-parent/siva-sample-application/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
       spec: maximumSize=100,expireAfterAccess=20s
 management:
   context-path: /monitoring
+  security:
+    enabled: false
   health:
     diskspace:
       enabled: false
