--- a/siva-parent/siva-test/src/test/resources/application-test.yml
+++ b/siva-parent/siva-test/src/test/resources/application-test.yml
@@ -1,8 +1,14 @@
 endpoints:
   health:
     enabled: true
+
+management:
+  security:
+    enabled: false
+
 plugtest:
   location: url
+
 siva:
   webapp:
     reportSignatureEnabled: true
