--- a/validation-services-parent/xroad-validation-service/src/main/resources/application.yml
+++ b/validation-services-parent/xroad-validation-service/src/main/resources/application.yml
@@ -3,9 +3,11 @@ server:
 
 management:
   context-path: /monitoring
+  security:
+    enabled: false
   health:
-      diskspace:
-        enabled: false
+    diskspace:
+      enabled: false
 
 endpoints:
   enabled: false
